k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: showcase-ingress
  namespace: showcase
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /dev(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-dev
                port:
                  number: 80
          - path: /qa(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-qa
                port:
                  number: 80
